--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
     <header>
         <nav>
-        <a href="" lang="en">Web<span>Studio</span></a>
+        <a href="./index.html" lang="en">Web<span>Studio</span></a>
         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
