--- a/index.html
+++ b/index.html
@@ -1,78 +1,107 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-        <a href="./index.html" lang="en">Web<span>Studio</span></a>
-        <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+    <!--Шапка сайта-->
+    <header class="page-header">
+        <nav class="site-nav">
+            <!--Логотип-->
+        <a href="./index.html" class="logo-nav link"><span>Web</span>Studio</a>
+        <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-            <ul>
+            <ul class="site-nav list">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
     </header>
     <main>
-        <section>
-           <h1>Эффективные решения<br> для вашего бизнеса</h1> 
-           <button type="submit">Заказать услугу</button>
+        <!--Section1-->
+        <section class="hero">
+           <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1> 
+           <button class="hero-btn" type="submit">Заказать услугу</button>
         </section>
-    <section>
-        <ul>
-        <li><h3>Внимание к деталям</h3>
-        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-        <li><h3>Пунктуальность</h3>
-        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-        <li><h3>Планирование</h3>
-        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-        <li><h3>Современные технологии</h3>
-        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
+        <!--Section2-->
+    <section class="about">
+        <ul class="about-list list">
+        <li class="about-item">
+            <h3 class="about-title">Внимание к деталям</h3>
+        <p class="about-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    </li>
+        <li class="about-item">
+            <h3 class="about-title">Пунктуальность</h3>
+        <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+    </li>
+        <li class="about-item">
+            <h3 class="about-title">Планирование</h3>
+        <p class="about-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+    </li>
+        <li class="about-item">
+            <h3 class="about-title">Современные технологии</h3>
+        <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+    </li>
     </ul>
     </section>
-    <section>
-    <h2>Чем мы занимаемся</h2>
-    <ul>
-    <li><img src="./images/img-1.jpg" alt="Верстка" height="294" width="370"/></li>
-    <li><img src="./images/img-2.1jpg.jpg" alt="Маркетинг" height="294" width="370"/></li>
-    <li><img src="./images/img-3.1.jpg" alt="Графический дизайн" height="294" width="370"/></li>
+    <!--Section3-->
+    <section class="work">
+    <h2 class="work-title">Чем мы занимаемся</h2>
+    <ul class="work-list list">
+    <li class="work-item"><img src="./images/img-1.jpg" alt="Верстка" height="294" width="370"/></li>
+    <li class="work-item"><img src="./images/img-2.1jpg.jpg" alt="Маркетинг" height="294" width="370"/></li>
+    <li class="work-item"><img src="./images/img-3.1.jpg" alt="Графический дизайн" height="294" width="370"/></li>
     </ul>
     </section>
-    <section>
-    <h2>Наша команда</h2>
-    <ul>
-    <li><img src="./images/img.jpg" alt="На фото Игорь Демьяненко" width="270"/>
-    <h3>Игорь Демьяненко</h3>
-    <p lang="en">Product Designer</p></li>
-    <li><img src="./images/img-2.jpg" alt="На фото Ольга Репеной" width="270"/>
-    <h3>Ольга Репина</h3>
-    <p lang="en">Frontend Developer</p></li>
-    <li><img src="./images/img-3.jpg" alt="На фото Николай Тарасов" width="270"/>
-    <h3>Николай Тарасов</h3> 
-    <p lang="en">Marketing</p></li>
-    <li><img src="./images/img-4.jpg" alt="На фото Михаил Ермаков" width="270"/>
-    <h3>Михаил Ермаков</h3> 
-    <p lang="en">UI Designer</p></li>
+    <!--Section4-->
+    <section class="team">
+    <h2 class="team-title">Наша команда</h2>
+    <ul class="team-list list">
+    <li class="team-item">
+        <img src="./images/img.jpg" alt="На фото Игорь Демьяненко" width="270"/>
+    <h3 class="team-subtitle">Игорь Демьяненко</h3>
+    <p class="team-text" lang="en">Product Designer</p>
+</li>
+    <li class="team-iteam">
+        <img src="./images/img-2.jpg" alt="На фото Ольга Репеной" width="270"/>
+    <h3 class="team-subtitle">Ольга Репина</h3>
+    <p class="team-text" lang="en">Frontend Developer</p>
+</li>
+    <li class="team-item">
+        <img src="./images/img-3.jpg" alt="На фото Николай Тарасов" width="270"/>
+    <h3 class="team-subtitle">Николай Тарасов</h3> 
+    <p class="team-text" lang="en">Marketing</p>
+</li>
+    <li class="team-item">
+        <img src="./images/img-4.jpg" alt="На фото Михаил Ермаков" width="270"/>
+    <h3 class="team-subtitle">Михаил Ермаков</h3> 
+    <p class="team-text" lang="en">UI Designer</p>
+</li>
 </ul>
     </section>
     </main>
-<footer>
-    <p lang="en">Web<span>Studio</span></p>
-    <address>
-        <ul>
-            <li><a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
+    <!--Footer-->
+<footer class="footer">
+    <p href="./index.html" class="logo-nav link"><span>Web</span>Studio</p>
+    <address class="address">
+        <ul class="footer-list list">
+            <li class="footer-item"><a class="link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
                     Леси Украинки, 26</a> </li>
-            <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a> </li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+            <li class="footer-item"><a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+            <li class="footer-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a> </li>
         </ul>
     </address>
     </footer>
