--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,12 @@
 </head>
 <body class="body">
     <header class="header">
-            <a class="nav-logo" href="./index.html" lang="en">Web<span class="logo">Studio</a>
-            <nav class="nav">
-            <ul class="nav-list list">
+            <a class="nav-logo" href="./index.html" lang="en">Web<span class="logo"><span class="logo-studio">Studio</span>
+            <ul>
                 <li class="nav-item"><a class="link" href="./portfolio.html">Студия</a></li>
                 <li class="nav-item"><a class="link link-current" href="./portfolio.html">Портфолио</a></li>
                 <li class="nav-item"><a class="link" href="./portfolio.html">Контакты</a></li>
             </ul>
-        </nav>
         <ul class="site-nav list">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
