--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </main>
     <!--Footer-->
 <footer class="footer">
-    <p href="./index.html" class="logo-nav link"><span>Web</span>Studio</p>
+    <a href="./index.html" class="logo-nav link"><span>Web</span>Studio</a>
     <address class="address">
         <ul class="footer-list list">
             <li class="footer-item"><a class="link" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
